--- a/assets/abouStyle.css
+++ b/assets/abouStyle.css
@@ -2,15 +2,29 @@ body {
     background-color: #181510;
     top: 30px;
     font-family: myFont;
+    /*height: 100vh;*/
+}
+
+.rightSection {
+    float: right;
+    clear: left;
+    width: 60%;
+    margin-right: 4%;
+    position: absolute;
+    top: 35%;
+    transform: translateX(58%);
+    /*padding: 0 5% 0 5%;*/
+}
+
+
+.aboutSection {
+    text-align: center;
+    clear: left;
+    padding: 0 5% 0 5%;
 }
 
 .aboutSection {
-    border: 3px red;
-    float: right;
-    width: 55%;
-    text-align: center;
-    margin: 5% 5% 5% 20%;
-    clear: left;
+
 }
 
 .aboutSection p {
@@ -18,19 +32,23 @@ body {
 }
 
 .name {
-    float: right;
-    width: 66%;
+    /*float: right;*/
+    margin-bottom: 10%;
     text-align: center;
     color: #cbb682;
-    margin-top: 30%;
     clear: left;
+
 }
 
-.headshot{
+.headshot {
+    width: 25%;
     margin-left: 5%;
     margin-right: 5%;
     float: left;
-    margin-top: 30%;
+    top: 25%;
+    position: absolute;
+
+
 }
 
 @font-face {
