--- a/assets/photoStyle.css
+++ b/assets/photoStyle.css
@@ -1,3 +1,51 @@
 body {
     background-color: #181510;
+    padding: 50px 1.5rem 1.5rem 1.5rem;
+}
+
+.image-gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 100%;
+    margin-inline: auto;
+}
+
+.image-gallery > img {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+
+    transition: scale 350ms ease, opacity 350ms linear;
+}
+
+.image-gallery:has(img:hover) img:not(:hover) {
+    scale: 0.8;
+    opacity: 0.7;
+}
+
+
+@font-face {
+    font-family: "myFont";
+    src: url('fonts/Roschild-owAjB.ttf');
+    src: url('fonts/Roschild-owAjB.ttf') format('embedded-opentype'),
+    url('fonts/Roschild-owAjB.ttf') format('woff2'),
+    url('fonts/Roschild-owAjB.ttf') format('woff'),
+    url('fonts/Roschild-owAjB.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: "myFont2";
+    src: url('fonts/MountainSignature-lgWJZ.ttf');
+    src: url('fonts/MountainSignature-lgWJZ.ttf') format('embedded-opentype'),
+    url('fonts/MountainSignature-lgWJZ.ttf') format('woff2'),
+    url('fonts/MountainSignature-lgWJZ.ttf') format('woff'),
+    url('fonts/MountainSignature-lgWJZ.ttf') format('truetype');
+}
+
+.roschild {
+    font-family: myFont;
+}
+
+.mountainFont {
+    font-family: myFont2;
 }
