--- a/assets/nav.css
+++ b/assets/nav.css
@@ -1,6 +1,27 @@
+/*#navbar {*/
+/*    display: flex;*/
+/*    background-color: black;*/
+/*    transform: translateY(-100%);*/
+/*    transition: transform .5s cubic-bezier(.4,0,.2,1);*/
+/*}*/
+/*#navbar a {*/
+/*    color: white;*/
+/*    text-decoration: none;*/
+/*}*/
+/*#navbar > * {*/
+/*    padding: 1rem;*/
+/*}*/
+/*body {*/
+/*    margin: 0;*/
+/*}*/
+/*.nav-container:hover #navbar {*/
+/*    transform: translateY(0);*/
+/*}*/
+
+
 nav {
     background-color: #cbb682;
-    position: fixed;
+    /*position: fixed;*/
     top: 0;
     width: 100%;
     opacity: 80%;
@@ -8,16 +29,29 @@ nav {
     font-family: myFont;
     font-weight: bold;
 
+    transition: transform .5s cubic-bezier(.4, 0, .2, 1);
+    display: flex;
+    transform: translateY(-100%);
+
+    /*border: 1px red solid;*/
+}
+
+nav:hover {
+    transform: translateY(0);
 }
 
 nav ul {
     list-style: none;
+    width: 100%;
+    /*border: 1px red solid;*/
 }
 
 nav ul li {
     float: left;
-    width: 16.66%;
+    width: 16%;
+    /*border: 1px red solid;*/
 }
+
 
 nav a {
     display: block;
@@ -32,6 +66,7 @@ nav a:hover {
 
 }
 
+/*----------------------------------*/
 /*nav.shift ul li a {*/
 /*    position:relative;*/
 /*    z-index: 1;*/
