--- a/assets/filmStyle.css
+++ b/assets/filmStyle.css
@@ -14,6 +14,8 @@ body {
     display: grid;
     grid: auto / repeat(2, 1fr);
     gap: 8px;
+    margin: 80px 0 0 0;
+    /*border: 2px solid red;*/
 }
 
 .grid-item {
