--- a/assets/infoStyle.css
+++ b/assets/infoStyle.css
@@ -1,8 +1,55 @@
 body {
     background-color: #181510;
     height: 100vh;
-    border: 2px solid blue;
+    font-family: myFont;
+    margin-top: 8%;
+    /*border: 2px solid blue;*/
 }
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(50%, 2fr));
+    /*border: 2px solid red;*/
+}
+
+.container-element {
+    display: grid;
+    grid: auto / repeat(2, 1fr);
+    gap: 8px;
+    margin: 80px 0 0 0;
+    /*border: 2px solid red;*/
+}
+
+.grid-item {
+    padding: 1rem;
+    font-size: 30px;
+    text-align: center;
+    grid-column: span 1;
+    /*border: 2px solid green;*/
+}
+
+.container-element .grid-item:nth-child(6n),
+.container-element .grid-item:nth-child(6n-1) {
+    grid-column: span 1;
+}
+.left-centered-element {
+    width: 80%;
+    /*height: 100%;*/
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    color: #cbb682;
+    /*border: 2px solid yellow;*/
+}
+/*.centered-element {*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    text-align: center;*/
+/*    color: #cbb682;*/
+/*}*/
 @font-face {
     font-family: "myFont";
     src: url('fonts/Roschild-owAjB.ttf');
